k8s-cluster-configuration/applications/ghostwrite/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghostwrite-db
  namespace: ghostwrite
spec:
  selector:
    app: ghostwrite-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
