k8s-cluster-configuration/applications/ghostwrite/base/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-app-only
  namespace: ghostwrite
spec:
  podSelector:
    matchLabels:
      app: ghostwrite-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ghostwrite
      ports:
        - port: 5432
